link to logout and seeds

--- a/app/views/codes/index.html.erb
+++ b/app/views/codes/index.html.erb
@@ -2,6 +2,9 @@
 
 <h1>Codes</h1>
 
+<%= link_to 'Crear Codigo', new_code_path %>
+<%= link_to 'Validar', validate_path %>
+
 <table>
   <thead>
     <tr>
@@ -27,8 +30,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Code', new_code_path %>
-<%= link_to 'Validate', validate_path %>
