--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <% if signed_in?%>
+      <%= link_to 'Cerrar sesion', destroy_user_session_path, method: :delete %>
+    <%else%>
+      <%= link_to 'Iniciar sesion', new_user_session_path %>
+    <%end%>
     <%= yield %>
   </body>
 </html>
