--- a/app/views/codes/validate.html.erb
+++ b/app/views/codes/validate.html.erb
@@ -1,7 +1,4 @@
-<h3 id="notice"><%= notice %></h3>
-<h3 class="alert"><%= alert %></h3>
-<h1>Validador de codigo</h1>
+<h3 class="notice text-center text-success"><%= notice %></h3>
+<h3 class="alert text-danger text-center"><%= alert %></h3>
 
 <%= render 'validate_form', code: @code %>
-
-<%= link_to 'Back', codes_path %>
